# CPP_Hub

./: README.md  project_structure_with_cmake_deps.dot
ACC/: CMakeLists.txt
ACC/app/: CMakeLists.txt  main.cpp
ACC/configured/: CMakeLists.txt  project_info.hpp.in
ACC/src/my_lib/: CMakeLists.txt  my_lib.cpp  my_lib.hpp
ACC/tests/: CMakeLists.txt  test_acc.cpp
ProjectKickStart/: CMakeLists.txt  Doxyfile  Makefile  generate_project_dot.py  project_structure.dot  project_structure_with_cmake_deps.dot
ProjectKickStart/docs/html/: dir_08ebf401352d0c333d3a643fc2ed36cf_dep.map  dir_08ebf401352d0c333d3a643fc2ed36cf_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_b1d71319a0c6566e0484239e22274b6f_dep.map  dir_b1d71319a0c6566e0484239e22274b6f_dep.md5  dir_bfccd401955b95cf8c75461437045ac0.html  dir_d422163b96683743ed3963d4aac17747.html  dir_d422163b96683743ed3963d4aac17747_dep.md5  globals.html  main_8cpp__incl.map  main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.map  main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.md5  my__lib_8cpp.html  my__lib_8cpp__incl.md5  my__lib_8cpp_ad1d09ba570dc319e8e872ac6ced10b2c_icgraph.map  my__lib_8cpp_source.html  my__lib_8hpp.html  my__lib_8hpp__dep__incl.map  src_2CMakeLists_8txt.html
StructuringOfProjects/: Doxyfile  generate_project_dot.py  project_structure_with_cmake_deps.dot
StructuringOfProjects/app/: main.cpp
StructuringOfProjects/docs/: cpp_project.tag
StructuringOfProjects/docs/html/: app_2CMakeLists_8txt.html  dir_000000_000001.html  dir_000003_000001.html  dir_08ebf401352d0c333d3a643fc2ed36cf.html  dir_b1d71319a0c6566e0484239e22274b6f.html  dir_d422163b96683743ed3963d4aac17747_dep.map  files.html  globals_func.html  graph_legend.html  inc_2CMakeLists_8txt.html  inc_2my__lib_2CMakeLists_8txt.html  index.html  main_8cpp.html  main_8cpp__incl.md5  main_8cpp_source.html  my__lib_8cpp__incl.map  my__lib_8hpp__dep__incl.md5  my__lib_8hpp_ad1d09ba570dc319e8e872ac6ced10b2c_icgraph.md5  my__lib_8hpp_source.html  src_2my__lib_2CMakeLists_8txt.html
StructuringOfProjects/docs/html/search/: files_0.js  functions_0.js  searchdata.js
StructuringOfProjects/src/my_lib/: my_lib.cpp
